# wordplay-qt

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
localization/: wordplay_en-US.ts  wordplay_en.ts  wordplay_fi-FI.ts  wordplay_fi.ts
src/: argparser.h  common.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  wordplay.cpp  wordplay.h
src/words/: en-US.txt  fi-FI.txt
